# python-prj-template

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  cookiecutter.json  requirements.txt  requirements_dev.txt
tests/: replay-config.yaml
{{cookiecutter.project_slug}}/: .dockerignore  .pylintrc  Dockerfile  Makefile  config.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
{{cookiecutter.project_slug}}/deploy/: {{cookiecutter.project_slug}}.deployment.yaml
{{cookiecutter.project_slug}}/tests/: conftest.py  test_apiserver.py
{{cookiecutter.project_slug}}/tests/commands/: test_cli.py  test_version.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  cli.py  client.py  config.py  loghandler.py  main.py  openapi.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/api/: {{cookiecutter.package_name}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/commands/: cli.py  command_base.py  openapi.py  runserver.py  utils.py  version.py
